finishing the project

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 <section class="home" id="home">
     <div class="home-content">
         <h3>Hello, It's Me</h3>
-        <h1>Fasoyin David</h1>
+        <h1>Fasoyin K. David</h1>
         <h3>And I'm a <span>Frontend Developer</span></h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, quod.</p>
+        <p>I am the specialist TechEd you need to train your students how to code in the most easy way.</p>
         <div class="social-media">
             <a href="#" style="--i:9"><i class='bx bxl-facebook-circle'></i></a>
             <a href="#" style="--i:10"><i class='bx bxl-whatsapp'></i></a>
             <a href="#" style="--i:11"><i class='bx bxl-instagram' ></i></a>
             <a href="#" style="--i:12"><i class='bx bxl-linkedin' ></i></a>
         </div>
-        <a href="" class="btn">Download CV</a>
+        <a href="Resume/My CV KodavTech.docx" download class="btn">Download CV</a>
     </div>
     <div class="home-img">
         <img src="images/pic3.png" alt="pic">
@@ -55,7 +55,7 @@
     <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
         <h3>Frontend Developer!</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, voluptas ad. Nobis suscipit ea libero quas fugiat omnis vitae asperiores mollitia veniam obcaecati quae, reiciendis voluptatum, voluptatibus dolor. Veniam at ea quisquam dolorem porro doloribus nesciunt aliquam beatae. Cupiditate error quae maxime quasi deleniti consectetur.</p>
+        <p>I am an experienced Web Developer specializing in front-end who is skilled in JavaScript, React, Web Development, Python, Git, HTML5, CSS3, Bootstrap, Tailwind. I built Kodavtech team majorly to tutor Pupils/Students in several schools in the fundamentals of coding. <br> <br> We teach block-based and text-based coding through the use of programming languages such as Scratch, MIT App Inventor, MBlock, PictoBlox, JavaScript, Python, HTML5, CSS3. We also train our Pupils/Students coding through a life Robot such as Lego Mindstorm Inventor Robot and Lego Spike Prime Robot....</p>
         <a href="#" class="btn">Read More</a>
     </div>
 </section>
@@ -70,21 +70,21 @@
         <div class="service-box">
             <i class='bx bx-code-alt'></i>
             <h3>Web Development</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta itaque eius quaerat amet error, distinctio sed eligendi iste animi eveniet.</p>
+            <p>Kids learn Text-based coding language and are enabled with the ability to build website like a real programmer.</p>
             <a href="#" class="btn">Read More</a>
         </div>
 
         <div class="service-box">
             <i class='bx bx-game'></i>
             <h3>Game Development</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta itaque eius quaerat amet error, distinctio sed eligendi iste animi eveniet.</p>
+            <p>We teach our Game development especially to the Pupils through block-based coding language to enable them have fun when learning coding.</p>
             <a href="#" class="btn">Read More</a>
         </div>
 
         <div class="service-box">
             <i class='bx bx-bot'></i>
             <h3>Robotics</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta itaque eius quaerat amet error, distinctio sed eligendi iste animi eveniet.</p>
+            <p>This is a fun way for kids to learn coding fundamentals by making their own robots through the coding syntax they learnt in their coding classes.</p>
             <a href="#" class="btn">Read More</a>
         </div>
     </div>
@@ -101,7 +101,7 @@
             <img src="images/sch-web1.png" alt="">
             <div class="portfolio-layer">
                 <h4>Web Design</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, perferendis!</p>
+                <p>A perfect example of a school website for both Secondary and Primary School.</p>
                 
                 <a href="" class="btn2">View</a>
             </div>
@@ -110,8 +110,8 @@
         <div class="portfolio-box">
             <img src="images/sc-p.png" alt="">
             <div class="portfolio-layer">
-                <h4>Web Design</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, perferendis!</p>
+                <h4>Game Development</h4>
+                <p>A game developed by our some of our pupils. </p>
 
                 <a href="https://scratch.mit.edu/projects/874254530" target="_blank" class="btn2">View</a>
             </div>
@@ -120,8 +120,8 @@
         <div class="portfolio-box">
             <img src="images/sc-p2.jpg" alt="">
             <div class="portfolio-layer">
-                <h4>Web Design</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, perferendis!</p>
+                <h4>Game Development</h4>
+                <p>A video of our pupils working on the game they built.</p>
 
                 <a href="https://fb.watch/lLYK2gerKw/" target="_blank" class="btn2">View</a>
             </div>
@@ -131,7 +131,7 @@
             <img src="images/kd-cars.png" alt="">
             <div class="portfolio-layer">
                 <h4>Web Design</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, perferendis!</p>
+                <p>Demo of a car website. </p>
                 <a href="#" target="_blank" class="btn2">View</a>
 
             </div>
@@ -140,8 +140,8 @@
         <div class="portfolio-box">
             <img src="images/rob2.png" alt="">
             <div class="portfolio-layer">
-                <h4>Web Design</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, perferendis!</p>
+                <h4>Robotics</h4>
+                <p>Pictures of our pupils and Students working with robots.</p>
 
                 <a href="https://web.facebook.com/media/set/?vanity=KodavTech&set=a.605634078362499" target="_blank" class="btn2">View</a>
 
@@ -151,8 +151,8 @@
         <div class="portfolio-box">
             <img src="images/rbt3.png" alt="">
             <div class="portfolio-layer">
-                <h4>Web Design</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, perferendis!</p>
+                <h4>Robotics</h4>
+                <p>A video of our pupils control a robot with remote control built by them.</p>
 
                 <a href="https://fb.watch/lMPzPpcKKx/" target="_blank" class="btn2">View</a>
             </div>
